--- a/templates/tos/index.html
+++ b/templates/tos/index.html
@@ -1,7 +1,7 @@
 {% extends "partials/layout.html" %}
 
-{% block pageContent %}
-    <div id="dev-login" class="box">
+{% block body %}
+    <div id="dev-login" class="box field">
         <h2>MPR {% trans %}Terms of Service{% endtrans %}</h2>
         <form method="post" action="/tos">
             <fieldset>
