Added '/tu' and '/tu/{proposal}'

--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -9,6 +9,7 @@
 @import "comments";
 @import "search-results";
 @import "packages";
+@import "tu";
 
 // External CSS.
 @import url('https://meyerweb.com/eric/tools/css/reset/reset.css');
