--- a/templates/partials/tu/proposals.html
+++ b/templates/partials/tu/proposals.html
@@ -1,120 +1,93 @@
-<div class="box">
+<div class="field tu-section">
     <h2>{% trans %}{{ title }}{% endtrans %}</h2>
 
-    {% if title == "Current Votes" and request.user.has_credential(creds.TU_ADD_VOTE) %}
-        <ul class="admin-actions">
-            <li>
-                <a href="/addvote">
-                    {% trans %}Add Proposal{% endtrans %}
-                </a>
-            </li>
-        </ul>
-    {% endif %}
-
     {% if not results %}
-        <p>
-            {% trans %}No results found.{% endtrans %}
-        </p>
+    	<p>{% trans %}No results found.{% endtrans %}</p>
+
     {% else %}
-        <table class="results {{ table_class }}">
-
-            <thead>
-                <tr>
-                    <th>{{ "Proposal" | tr }}</th>
-                    <th>
-                        {% set off_qs = "%s=%d" | format(off_param, off) %}
-                        {% set by_qs = "%s=%s" | format(by_param, by_next | quote_plus) %}
-                        <a href="?{{ q | extend_query([off_param, off], [by_param, by_next]) | urlencode }}">
-                            {{ "Start" | tr }}
-                        </a>
-                    </th>
-                    <th>{{ "End" | tr }}</th>
-                    <th>{{ "User" | tr }}</th>
-                    {% if title != "Current Votes" %}
-                        <th>{{ "Yes" | tr }}</th>
-                        <th>{{ "No" | tr }}</th>
-                    {% endif %}
-                    <th>{{ "Voted" | tr }}</th>
-                </tr>
-            </thead>
-
-            <tbody>
-                {% for result in results %}
-                    <tr>
-                        <td>
-                            <!-- Truncate the agenda back to prev_len. -->
-                            {% set agenda = result.Agenda[:prev_len] %}
-                            <a href="/tu/{{ result.ID }}">{{ agenda }}</a>
-                        </td>
-
-                        <!-- Convert result.Submitted (timestamp) to datetime,
-                        then apply the request's timezone to it. -->
-                        {% set submitted = result.Submitted | dt | as_timezone(timezone) %}
-                        <td>{{ submitted.strftime("%Y-%m-%d") }}</td>
-
-                        <!-- Convert result.End (timestamp) to datetime,
-                        then apply the request's timezone to it. -->
-                        {% set end = result.End | dt | as_timezone(timezone) %}
-                        <td>{{ end.strftime("%Y-%m-%d") }}</td>
-
-                        <td>
-                            {% if not result.User %}
-                                N/A
-                            {% else %}
-                                <a href="/packages/?K={{ result.User }}&amp;SeB=m">
-                                    {{ result.User }}
-                                </a>
-                            {% endif %}
-                        </td>
-
-                        {% if title != "Current Votes" %}
-                            <td>{{ result.Yes }}</td>
-                            <td>{{ result.No }}</td>
-                        {% endif %}
-
-                        {% set vote = (result | get_vote(request)) %}
-                        <td>
-                            {% if vote %}
-                                <span style="color: green; font-weight: bold">
-                                    {{ "Yes" | tr }}
-                                </span>
-                            {% else %}
-                                <span style="color: red; font-weight: bold">
-                                    {{ "No" | tr }}
-                                </span>
-                            {% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
-        <div class="pkglist-stats">
-            <p class="pkglist-nav">
+        <div class="tu-navigator">
+            <p>
                 {% if total_votes > pp %}
-
                     {% if off > 0 %}
                         {% set off_qs = "%s=%d" | format(off_param, off - 10) %}
                         {% set by_qs = "%s=%s" | format(by_param, by | quote_plus) %}
-                        <a class="page"
-                           href="?{{ q | extend_query([off_param, ([off - 10, 0] | max)], [by_param, by]) | urlencode }}">
-                            ‹ Back
-                        </a>
+
+                        <a class="page" href="?{{ q | extend_query([off_param, ([off -10, 0] | max)], [by_param, by]) | urlencode }}">Back</a>
                     {% endif %}
 
                     {% if off < total_votes - pp %}
                         {% set off_qs = "%s=%d" | format(off_param, off + 10) %}
                         {% set by_qs = "%s=%s" | format(by_param, by | quote_plus) %}
-                        <a class="page"
-                           href="?{{ q | extend_query([off_param, off + pp], [by_param, by]) | urlencode }}">
-                            Next ›
-                        </a>
+                        <a class="page" href="?{{ q | extend_query([off_param, off + pp], [by_param, by]) | urlencode }}">Next</a>
                     {% endif %}
-
-                {% endif %}
-            </p>
+                </p>
+            {% endif %}
         </div>
 
-    {% endif %}
+        <div class="search-results">
+            {% for result in results %}
+                <div class="search-item">
+                    <div class="item-section">
+                        <p class="title">{{ "Proposal" | tr }}:</p>
+                        <p class="value">
+                            {% set agenda = result.Agenda[:prev_len] %}
+                            <a href="/tu/{{ result.ID }}">{{ agenda }}</a>
+                        </p>
+                    </div>
 
+                    <div class="item-section">
+                        <p class="title">{{ "Start" | tr }}:</p>
+                        <p class="value">
+                            {% set submitted = result.Submitted | dt | as_timezone(timezone) %}
+                            {{ submitted.strftime("%Y-%m-%d") }}
+                        </p>
+                    </div>
+
+                    <div class="item-section">
+                        <p class="title">{{ "End" | tr }}:</p>
+                        <p class="value">
+                            {% set end = result.End | dt | as_timezone(timezone) %}
+                            {{ end.strftime("%Y-%m-%d") }}
+                    </div>
+
+                    <div class="item-section">
+                        <p class="title">{{ "User" | tr }}:</p>
+                        <p class="value">
+                            {% if not result.User %}
+                                N/A
+                            {% else %}
+                                <a href="/packages/?K={{ result.User }}&amp;SeB=m">{{ result.User }}</a>
+                            {% endif %}
+                        </p>
+                    </div>
+
+                    {% if title != "Current Votes" %}
+                        <div class="item-section">
+                            <p class="title">{{ "Yes" | tr }}:</p>
+                            <p class="value">{{ result.Yes }}</p>
+                        </div>
+
+                        <div class="item-section">
+                            <p class="title">{{ "No" | tr }}:</p>
+                            <p class="value">{{ result.No }}</p>
+                        </div>
+                    {% endif %}
+
+                    <div class="item-section">
+                        <p class="title">{{ "Voted" | tr }}</p>
+                        <p class="value">
+                            {% set vote = (result | get_vote(request)) %}
+
+                            {% if vote %}
+                                {{ "Yes" | tr }}
+                            {% else %}
+                                {{ "No" | tr }}
+                            {% endif %}
+                        </p>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
 </div>
+{# vim: set ts=4 sw=4 expandtab: #}
