--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,11 +1,9 @@
 <footer>
 	<div class="copyright">
 		<p>Copyright &copy; 2021-{{ now.strftime("%Y") }} makedeb Development Team.</p>
-		<!-- Since makedeb uses the same code base as aurweb, we should include the year of the last upstream commit we used. --!>
-		<p>Copyright &copy; 2004-2022 aurweb Development Team.</p>
 	</div>
 	<div class="links">
-		<a href="https://mpr.{{ hw_url }}">MPR</a>
+		<a href="/about">Instance Information</a>
 		<a href="https://docs.{{ makedeb_url }}">Docs</a>
 		<a href="https://github.com/makedeb">GitHub</a>
 	</div>
