--- a/media/scss/footer.scss
+++ b/media/scss/footer.scss
@@ -4,13 +4,16 @@ $footer-max-width: 1230px;
 
 footer {
 	height: 100%;
-	padding: 0.8em 0;
-	padding-left: 1em;
+	padding: 0.8em 0.5em;
 	font-size: 1.1em;
 	background-color: $dark-grey;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+
+	a, p {
+		line-height: 1.4em;
+	}
 
 	@media (max-width: $footer-max-width) {
 		flex-direction: column;
@@ -18,13 +21,11 @@ footer {
 
 	.copyright {
 		@media (max-width: $footer-max-width) {
-			padding-bottom: 0.8em;
-			padding-right: 1em;
+			padding: 0.4em 0.5em;
 		}
 
 		p {
 			color: $light-grey;
-			line-height: 1.2em;
 
 			@media (max-width: $footer-max-width) {
 				text-align: center;
