--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -10,6 +10,7 @@
 @import "search-results";
 @import "packages";
 @import "tu";
+@import "pkgstats";
 
 // External CSS.
 @import url('https://meyerweb.com/eric/tools/css/reset/reset.css');
