--- a/templates/requests.html
+++ b/templates/requests.html
@@ -8,106 +8,7 @@
         {% if not total %}
             <p>{{ "No requests matched your search criteria." | tr }}</p>
         {% else %}
-            {% include "partials/pager.html" %}
-            
-            <div id="search-results">
-	            {% for result in results %}
-	    	        <div class="search-item">
-			            <h1>
-				            {# If the PackageBase still exists, link to it. Otherwise, just display it without a link. #}
-				            {% if result.PackageBase %}
-					            <a href="/pkgbase/{{ result.PackageBaseName }}">{{ result.PackageBaseName }}</a>
-				            {% else %}
-					            {{ result.PackageBaseName }}
-				            {% endif %}
-                        </h1>
-                        <hr>
-
-                        <div class="item-section">
-                            <p class="title">{{ "Type" | tr }}:</p>
-                            <p class="value">
-                                {{ result.RequestType.name_display() | tr }}
-
-                                {# If the RequestType is a merge and request.MergeBaseName is valid. #}
-                                {% if result.RequestType.ID == 3 and result.MergeBaseName %}
-                                (<a href="/pkgbase/{{ result.MergeBaseName }}">{{ result.MergeBaseName }}</a>)
-                                {% endif %}
-                            </p>
-                        </div>
-
-                        <div class="item-section">
-                            <p class="title">{{ "Comments" | tr }}:</p>
-                            <p class="value">{{ result.Comments }}</p>
-                        </div>
-
-                        <div class="item-section">
-                            <p class="title">{{ "Filed by" | tr }}:</p>
-                            <p class="value"><a href="/account/{{ result.User.Username}}">{{ result.User.Username }}</a></p>
-                        </div>
-
-                        <div class="item-section">
-                            <p class="title">{{ "Date" | tr }}:</p>
-                            <p class="value">
-                                {% set date = result.RequestTS | dt | as_timezone(timezone) %}
-                                {{ date.strftime("%Y-%m-%d %H:%M") }}
-                            </p>
-                        </div>
-
-                        <div class="item-section">
-                            <p class="title">{{ "Status" | tr }}:</p>
-                            <p class="value">
-                                {% if result.Status == 0 %}
-                                    {% set temp_q = {"next": "/requests" } %}
-
-                                    {% if result.RequestType.ID == 1 %}
-                                        {% set action = "delete" %}
-                                    {% elif result.RequestType.ID == 2 %}
-                                        {% set action = "disown" %}
-                                    {% elif result.RequestType.ID == 3 %}
-                                        {% set action = "merge" %}
-
-                                        {# Add the 'via' url query parameter. #}
-                                        {% set temp_q = temp_q | extend_query(["into", result.MergeBaseName]) %}
-                                    {% endif %}
-
-                                    {% if request.user.is_elevated() and not result.ClosedTS %}
-                                        {# If RequestType is an orphan and it's not yet due, it's locked to allow the maintainer time to react to such a request. On request, orphans are locked for two weeks. #}
-                                        {% if result.RequestType.ID == 2 and not due %}
-                                            {% set idle_time = config_getint("options", "request_idle_time") %}
-                                            {% set time_delta = (utcnow - result.RequestTS | int) %}
-                                            {% set time_left = idle_time - time_delta %}
-                                            {% if time_left > (48 * 3600) %}
-                                                {% set n = round(time_left / (24 * 3600)) %}
-                                                {% set time_left_fmt = (n | tn("~%d day left", "~%d days left") | format(n)) %}
-
-                                            {% elif time_left > 3600 %}
-                                                {% set n = round(time_left / 3600) %}
-                                                {% set time_left_fmt = (n | tn("~%d hour left", "~%d hours left") | format(n)) %}
-
-                                            {% else %}
-                                                {% set time_left_fmt = ("<1 hour left" | tr) %}
-                                            {% endif %}
-
-                                            {{ "Locked" | tr }} ({{ time_left_fmt }})
-
-                                        {% else %}
-                                            {# Only elevated users (TU or Dev) are allowed to accept requests. #}
-                                            <a href="/pkgbase/{{ result.PackageBaseName }}/{{ action }}?{{ temp_q | urlencode }}">{{ "Accept" | tr }}</a>
-                                        {% endif %}
-                                    {% endif %}
-
-                                    {% if not result.ClosedTS %}
-                                        | <a href="/requests/{{ result.ID }}/close">{{ "Close" | tr }}</a>
-                                    {% endif %}
-
-                                {% else %}
-                                    {{ result.status_display() }}
-                                {% endif %}
-                            </p>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
+            {% include "requests/results.html" %}
         {% endif %}
     </div>
 {% endblock %}
