Updated RPC docs to fit MPR web UI styling

--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -41,6 +41,7 @@ header {
 	.links {
 		justify-self: end;
 		align-self: center;
+		align-items: center;
 		display: flex;
 		flex-direction: row;
 		padding-right: 0.75em;
